libs/preprocessor/tests/errors/pe13_include_not_encased_start_only/stderr.ansi
[0m[1m[38;5;9merror[PE13][0m[1m: include not encased[0m
  [0m[36m┌─[0m source.hpp:1:10
  [0m[36m│[0m  
[0m[36m1[0m [0m[36m│[0m   #include [0m[31m<something.hpp[0m
  [0m[36m│[0m [0m[31m╭[0m[0m[31m──────────^[0m
[0m[36m2[0m [0m[36m│[0m [0m[31m│[0m 
  [0m[36m│[0m [0m[31m╰[0m[0m[31m^ not encased[0m
  [0m[36m│[0m  
  [0m[36m=[0m [32mtry[0m: <something.hpp>

